<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_appearance">

        <ListPreference
            app:key="pref_theme"
            app:title="@string/settings_theme_title"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:defaultValue="system"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_chart">

        <EditTextPreference
            app:key="pref_weight_lower"
            app:title="@string/settings_lower_bound_title"
            app:dialogTitle="@string/settings_lower_bound_title"
            app:dialogMessage="@string/settings_bound_dialog_message"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="pref_weight_upper"
            app:title="@string/settings_upper_bound_title"
            app:dialogTitle="@string/settings_upper_bound_title"
            app:dialogMessage="@string/settings_bound_dialog_message"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>